fix: Position mobile info-toggle button to bottom-right to avoid overlay with zoom controls

--- a/static/index.html
+++ b/static/index.html
@@ -102,6 +102,8 @@
           </button>
         </div>
 
+        <button class="info-toggle" title="Toggle Info" data-i18n-title="ui.toggle_info">ℹ</button>
+
         <div class="viewer-main">
           <img id="viewer-image" class="viewer-image" alt="Photo" data-i18n-alt="ui.photo" />
           <video id="viewer-video" class="viewer-video" controls style="display: none"></video>
