debug: add console logging and HTML onclick for theme toggle

--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,7 @@
               class="theme-toggle"
               title="Toggle theme"
               data-i18n-title="ui.toggle_theme"
+              onclick="console.log('Theme toggle clicked from HTML'); window.turboPixApp?.toggleTheme();"
             >
               <span class="theme-icon"></span>
             </button>
