feat: add semantic search with ML embeddings for natural language photo queries

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
               <input
                 type="text"
                 id="search-input"
-                placeholder="Search photos..."
+                placeholder="AI-powered photo search..."
                 data-i18n-placeholder="ui.search_photos_placeholder"
                 class="search-input"
               />
