--- a/static/index.html
+++ b/static/index.html
@@ -108,13 +108,38 @@
     <div id="photo-viewer" class="photo-viewer">
       <div class="viewer-overlay"></div>
       <div class="viewer-content">
-        <button class="viewer-close" title="Close" data-i18n-title="ui.close" data-icon="x"></button>
-        <button class="viewer-prev" title="Previous" data-i18n-title="ui.previous" data-icon="chevron-left"></button>
-        <button class="viewer-next" title="Next" data-i18n-title="ui.next" data-icon="chevron-right"></button>
+        <button
+          class="viewer-close"
+          title="Close"
+          data-i18n-title="ui.close"
+          data-icon="x"
+        ></button>
+        <button
+          class="viewer-prev"
+          title="Previous"
+          data-i18n-title="ui.previous"
+          data-icon="chevron-left"
+        ></button>
+        <button
+          class="viewer-next"
+          title="Next"
+          data-i18n-title="ui.next"
+          data-icon="chevron-right"
+        ></button>
 
         <div class="viewer-zoom-controls">
-          <button class="zoom-btn zoom-out" title="Zoom Out" data-i18n-title="ui.zoom_out" data-icon="minus"></button>
-          <button class="zoom-btn zoom-in" title="Zoom In" data-i18n-title="ui.zoom_in" data-icon="plus"></button>
+          <button
+            class="zoom-btn zoom-out"
+            title="Zoom Out"
+            data-i18n-title="ui.zoom_out"
+            data-icon="minus"
+          ></button>
+          <button
+            class="zoom-btn zoom-in"
+            title="Zoom In"
+            data-i18n-title="ui.zoom_in"
+            data-icon="plus"
+          ></button>
           <button
             class="zoom-btn zoom-fit"
             title="Fit to Screen"
@@ -129,7 +154,12 @@
           ></button>
         </div>
 
-        <button class="info-toggle" title="Toggle Info" data-i18n-title="ui.toggle_info" data-icon="info"></button>
+        <button
+          class="info-toggle"
+          title="Toggle Info"
+          data-i18n-title="ui.toggle_info"
+          data-icon="info"
+        ></button>
 
         <div class="viewer-main">
           <img id="viewer-image" class="viewer-image" alt="Photo" data-i18n-alt="ui.photo" />
@@ -183,7 +213,7 @@
               ></button>
             </div>
 
-            <div class="photo-meta-full" style="display: none;">
+            <div class="photo-meta-full" style="display: none">
               <div class="meta-section">
                 <h4 class="meta-section-title">File Information</h4>
                 <div class="meta-item">
@@ -288,7 +318,7 @@
                 </div>
               </div>
 
-              <div class="meta-section" id="video-section" style="display: none;">
+              <div class="meta-section" id="video-section" style="display: none">
                 <h4 class="meta-section-title">Video Information</h4>
                 <div class="meta-item">
                   <label>Duration:</label>
@@ -312,7 +342,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
@@ -336,6 +365,10 @@
     <script src="/i18n/en/index.js"></script>
     <script src="/i18n/de/index.js"></script>
     <script src="/js/api.js"></script>
+    <script src="/js/viewerControls.js"></script>
+    <script src="/js/viewerMetadata.js"></script>
+    <script src="/js/photoCard.js"></script>
+    <script src="/js/infiniteScroll.js"></script>
     <script src="/js/photoGrid.js"></script>
     <script src="/js/viewer.js"></script>
     <script src="/js/search.js"></script>
