Index accepted collages and update metadata display

--- a/static/index.html
+++ b/static/index.html
@@ -279,7 +279,7 @@
                   File Information
                 </h4>
                 <div class="meta-item">
-                  <label data-i18n="ui.metadata.filename">Filename:</label>
+                  <label data-i18n="ui.metadata.file_path">File path:</label>
                   <span id="meta-filename">-</span>
                 </div>
                 <div class="meta-item">
