--- a/static/index.html
+++ b/static/index.html
@@ -72,6 +72,7 @@
           <button class="nav-item" data-view="favorites" data-i18n="ui.favorites">Favorites</button>
           <button class="nav-item" data-view="videos" data-i18n="ui.videos">Videos</button>
           <button class="nav-item" data-view="collages" data-i18n="ui.collages">Collages</button>
+          <button class="nav-item" data-view="cleanup" data-i18n="ui.cleanup">Cleanup</button>
         </div>
       </nav>
 
@@ -512,6 +513,7 @@
     <script src="/js/search.js"></script>
     <script src="/js/timeline.js"></script>
     <script src="/js/collages.js"></script>
+    <script src="/js/cleanup.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
