feat(viewer): add accept collage action to detail viewer
- Add accept button to viewer toolbar (visible only for pending collages)
- Implement accept flow: disable button, call API, emit event, close viewer
- Handle success (emit collageAccepted, close) and failure (keep open) paths
- Add E2E tests for happy path and API failure scenarios
- Reuse existing i18n keys and styling patterns

--- a/static/index.html
+++ b/static/index.html
@@ -225,6 +225,14 @@
             data-icon="rotate-cw"
           ></button>
           <button
+            class="zoom-btn accept-collage-btn"
+            title="Accept Collage"
+            data-action="accept-collage"
+            data-i18n-title="ui.accept_collage"
+            data-icon="check"
+            style="display: none"
+          ></button>
+          <button
             class="zoom-btn delete-photo-btn"
             title="Delete Photo"
             data-i18n-title="ui.delete_photo"
